# getgpt

./: .gitignore  PAGER.py  autocomplete_api.py  chat.py  create_embeddings.py  data_sources.py  efo_conversion.py  environment.yml  g2d_utils.py  gene_extraction.py  main.py  opentargets_api.py  pager_backend.py  pdf_processing.py  pubmed.py  pyproject.toml  requirements.txt  rummageo_embeddings.py  web.py
app/: main.py  models.py  providers.py  services.py
app/static/: analyze.js  loader.css  scripts.js  styles.css
app/templates/: analyze.html  api_docs.html  docs.html  index.html
data/: .gitattributes  DGIdb_2_3_25.csv  gene_names.txt  mesh_umls_final.csv  requirements.txt
scripts/: efo_embeddings.py  get_efo_terms.py  get_geo_titles.py  rummageo_embeddings.py
