[project]
name = "getgpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "gseapy>=1.1.9",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pandasgwas>=1.2.2",
    "pyarrow>=21.0.0",
    "rapidfuzz>=3.13.0",
    "rdflib>=7.1.4",
    "selenium>=4.34.2",
    "sentence-transformers>=5.0.0",
    "torch>=2.7.1",
]
